resolved IOS issues with text wrap on homepage and business name on springboard page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,7 @@ font-family: 'Roboto', sans-serif; */
     margin-top: -160px;
     padding: 10px 45px;
     margin: -160px 45px 0px;
+    overflow-wrap: normal!important;
 }
 .card h5 {
     color: rgb(167, 162, 162);
@@ -505,7 +506,7 @@ font-family: 'Roboto', sans-serif; */
     letter-spacing: 8px;
     color: white;
     text-shadow: 1px 1px 1px black, 0 0 20px black;
-    font-size: 50px;
+    font-size: 42px;
     border-bottom: solid 2px white;
 }
 .springboard-image-text p {
@@ -513,7 +514,7 @@ font-family: 'Roboto', sans-serif; */
     letter-spacing: 8px;
     color: white;
     text-shadow: 1px 1px 1px black, 0 0 20px black;
-    font-size: 30px;
+    font-size: 24px;
 }
 .sb-main-text {
     font-family: 'Montserrat', sans-serif;
@@ -546,7 +547,7 @@ font-family: 'Roboto', sans-serif; */
     margin-right: auto;
     border-radius: 10%;
     margin-top: 30px;
-    box-shadow: 5px 10px 40px grey;
+    box-shadow: 15px 15px 20px grey;
 }
 .about-us-details h5 {
     font-family: 'Montserrat', sans-serif;
